# SARC

./: .gitignore  README.md  config.json  connection.py  default.nix  main.py  packet.py  pyproject.toml  run.py  utils.py
sarc/: cli.py  config.example.json  connection.py  helpers.py  network.py  packet.py  protocol.py  recorder.py
